; ModuleID = '/home/carl/AnghaBench/reactos/base/services/tcpsvcs/extr_daytime.c_SendTime.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/tcpsvcs/extr_daytime.c_SendTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCKET_ERROR = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i32] [i32 68, i32 97, i32 121, i32 84, i32 105, i32 109, i32 101, i32 58, i32 32, i32 69, i32 114, i32 114, i32 111, i32 114, i32 32, i32 115, i32 101, i32 110, i32 100, i32 105, i32 110, i32 103, i32 32, i32 100, i32 97, i32 116, i32 97, i32 0], align 4
@LOG_ERROR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @SendTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SendTime(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i64 @strlen(i32* %7)
  %9 = add nsw i64 %8, 1
  store i64 %9, i64* %6, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i64 @send(i32 %10, i32* %11, i64 %12, i32 0)
  %14 = load i64, i64* @SOCKET_ERROR, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = call i32 (...) @WSAGetLastError()
  %18 = load i32, i32* @LOG_ERROR, align 4
  %19 = call i32 @LogEvent(i8* bitcast ([28 x i32]* @.str to i8*), i32 %17, i32 0, i32 %18)
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @strlen(i32*) #1

declare dso_local i64 @send(i32, i32*, i64, i32) #1

declare dso_local i32 @LogEvent(i8*, i32, i32, i32) #1

declare dso_local i32 @WSAGetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
